Reconcile: restore and re-track utils after ZIP-based folder replacement

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -69,7 +69,13 @@
       width: 100%;
       box-sizing: border-box;
     }
-  </style>
+  
+    .logo {
+      max-height: 80px;
+      width: auto;
+      margin-right: 1.5rem;
+    }
+    </style>
 </head>
 <body>
   <div class="card">
